<?xml version="1.0" encoding="UTF-8"?>
<resources>

    <string name="app_name">Twin Rinks Mobile</string>
    <string name="string_about">"This app was conceived, designed, and developed by GigaStorm Developers. We hope you enjoy it. If you have any suggestions, feel free to send us an email using the button below. Or, you can give the app a rating on the Google Play Store.\n\nIf you are a developer and want to contribute to the project, search for twinrinks-mobile on github or send us an email to learn more."</string>
    <string name="homeTeam">Home Team</string>
    <string name="awayTeam">Away Team</string>
    <string name="rink">Rink</string>
    <string name="league">League</string>
    <string name="dateTime">Date &amp; Time</string>
    
    <string name="addNewTeams">Add New Teams&#8230;</string>
    <string name="yourTeams">Your Teams</string>
    <string name="allGames">All Games</string>
    <string name="playoffs">Playoffs</string>
    <string name="today">Today</string>
    <string name="chooseDate">Choose Date</string>
    <string name="anyTeam">Any Team</string>
    <string name="mainIcon">Main Icon</string>
    <string name="share">Share</string>
    <string name="rate">Rate App</string>
    <string name="sendFeedback">Send Feedback</string>
</resources>